themes/webtrees/style.css
/*
 * Style for Standard theme
 *
 * webtrees: Web based Family History software
 * Copyright (C) 2011 webtrees development team.
 *
 * Derived from PhpGedView
 * Copyright (C) 2002 to 2009  PGV Development Team.  All rights reserved.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 *
 * $Id$
 */

/* Add a permanent scrollbar, to prevent "flickering" when hover effects lengthen page */
html {overflow-y:scroll;}

body {
	color:#555;
	background-color:#fff;
	font:12px tahoma, arial, helvetica, sans-serif;
	margin:1px;
	padding-left:5px;
}

fieldset {
	margin:8px 8px 4px 8px;
	text-align:left;
}
html[dir='rtl'] fieldset {text-align:right;}

legend {
	font-weight:bold;
}

a {
	color:#555;
	text-decoration:none;
}

a:hover {
	color:#f00;
	text-decoration:none;
}

:focus {
  outline-style:none;
}

th {
	font-weight:100;
}

ul {
	padding-left:15px;
	padding-right:15px;
	margin:8px;
}

img {
	border:none;
}

legend img {
	height:20px;
	vertical-align:middle;
	width:20px;
}

img.block, #calendar_img_indi, #calendar_img_fam, #biglink img, #mycart img  {
	border:none;
	height:25px;
	vertical-align:middle;
}

.line1, .line2, .line3 {vertical-align:bottom;} 
.line4 {vertical-align:middle;}
.line5 {vertical-align:top;}

#mycart a img  {
	height:15px;
}

#content {
	clear: both;
}

#footer {
	clear:both;
	font-size:12px;
	padding-top:10px;
	text-align:center;
}

.optionbox a img {
}

.button {
	width:60px;
}
.gedcom_table {
	border:1px solid #81a9cb;
	margin:0;
	width:99%;
}

.person_box {
	background-color:#edf7fd;
	border:solid #81a9cb 1px;
	padding:2px;
}

.person_boxF {
	background-color:#e9daf1;
	border:1px solid #ff2080;
	padding:2px;
}

.person_boxNN {
	background-color:#fff;
	border:dashed #81a9cb 1px;
	padding:2px;
}

.person_box:target, .news_box:target, #gedcom_stats:target {
	background-color:#ffc;
}

.list_table {
	margin-left:auto;
	margin-right:auto;
}

.center {
	text-align:center;
}

table.center {
	margin-left:auto;
	margin-right:auto;
}

.list_label, .list_label_wrap {
	color:#fff;
	background-color:#81a9cb;
	font-weight:bold;
	font-size:12px;
	text-align:center;
}

.list_value, .list_value_wrap {
	background-color:#edf7f9;
	
	border:solid #81a9cb 1px;
	font-size:12px;
	vertical-align:top;
}

.list_label, .list_value {
	white-space:nowrap;
}

.list_label_wrap, .list_value_wrap {
	white-space:normal;
}

.list_item {
	font-size:12px;
}

.facts_table, .facts_table_rtl {
	width:100%;
}

.facts_label {
	background-color:#81a9cb;
	font-size:12px;
	padding:4px 4px 4px 4px;
	width:20%;
	text-align:center;
}

.facts_label02, .facts_label03 {
	color:#fff;
	font-size:12px;
	padding:4px;
	text-align:center;
	font-weight:bold;
}

.facts_label02 {
	background-color:#c4c9e6;
}

.facts_label03 {
	background-color:#81a9cb;
}

.facts_value {
	background-color:#edf7fd;
	border:solid #81a9cb 1px;
	font-size:12px;
	padding:4px;
}

.facts_value02 {
	background-color:#edf7fd;
	border:solid #81a9cb 1px;
	font-size:12px;
	padding:5px;
}

.facts_labelred, .facts_labelblue {
	color:#fff;
	background-color:#81a9cb;
	font-size:12px;
	padding:4px;
	width:20%;
	text-align:center;
}

.facts_valuered, .facts_valueblue {
	background-color:#edf7fd;
	font-size:12px;
	padding:4px;
}

.facts_labelred, .facts_valuered {
	border:solid #f00 2px;
}

.facts_labelblue, .facts_valueblue {
	border:solid #00f 2px;
}

.tabs_table {
	width:99%;
}

.tab_cell_active {
	background-color:#fff;
	border-left:outset #81a9cb 2px;
	border-top:outset #81a9cb 2px;
	border-right:outset #81a9cb 2px;
	text-align:center;
	font-weight:bold;
	font-size:10pt;
}

.tab_cell_inactive {
	background-color:#edf7fd;
	border-left:solid #81a9cb 2px;
	border-top:solid #81a9cb 2px;
	border-right:outset #81a9cb 2px;
	text-align:center;
	font-weight:bold;
	font-size:10pt;
}

.tab_cell_inactive_empty {
	background-color:#c6d0da;
	border-left:solid #81a9cb 2px;
	border-top:solid #81a9cb 2px;
	border-right:outset #81a9cb 2px;
	text-align:center;
	font-weight:bold;
	font-size:10pt;
}

.tab_cell_inactive_empty a {
	color:#999;
}

.tab_active_bottom {
	border:none;
	height:5px;
}

.tab_inactive_bottom {
	border-left:none;
	border-right:none;
	border-top:outset #81a9cb 2px;
	height:5px;
}

.tab_inactive_bottom_right {
	border-left:none;
	border-right:none;
	border-top:outset #81a9cb 2px;
	width:33%;
	height:5px;
}

.name1 {
	color:#333;
	font-weight:bold; font-size:12px;
}

a:hover .name1 {
	color:#f00;
	font-weight:bold; font-size:12px;
}

a:hover .name2 {
	color:#f00;
	font-weight:bold; font-size:12px;
}

a:hover .nameZoom {
	color:#f00;
	font-weight:bold; font-size:14px;
}


.name2 {
	color:#333;
	font-weight:bold; font-size:12px;
}

.details1 {
	font-size:11px;
}

.details2 {
	font-size:12px;
}

.nameZoom {
	color:#333;
	font-weight:bold; font-size:14px;
}

.detailsZoom {
	font-size:14px;
	text-decoration:none;
}

.details_label {
	font-weight:bold;
}

.name_head {
	color:#333;
	font-weight:bold; font-size:16px;
	letter-spacing:.2px;
	line-height:2;
	padding:0 5px;
}

.date {
	color:#337;
}

.field {
}

.label {
	font-weight:bold;
}

.error {
	color:#d00;
	font-weight:bold;
}

.largeError {
	color:#d00;
	font-size:large;
	font-weight:bold;
}

.warning {
	color:#f00;
	font-weight:bold;
}

.indent {
	padding-left:20px;
}

.indent_rtl {
	padding-right:20px;
}

.image {
	height:150px;
	padding:5px;
	margin:2px;
}
/* ... */

